--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -26,7 +26,7 @@ jobs:
       - id: check-new-release
         name: Check for new releases
         run: |
-          echo "::set-output new_release=$(git show promtail-${{steps.loki-latest-release.outputs.release}} && echo -n ${{steps.loki-latest-release.outputs.release}} || echo -n '')"
+          echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet || echo -n ${{steps.loki-latest-release.outputs.release}})"
       - name: Trigger release build
         if: ${{steps.check-new-release.outputs.new_release}}
         uses: ./.github/workflows/build-promtail-static-release.yaml
