--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet || echo -n ${{steps.loki-latest-release.outputs.release}})"
       - name: Trigger release build
-        if: ${{ steps.check-new-release.outputs.new_release != '' }}
+        if: ${{ !!steps.check-new-release.outputs.new_release }}
         uses: ./.github/workflows/build-promtail-static-release.yaml
         with:
           upstream_promtail_release: ${{steps.loki-latest-release.outputs.release}}
