--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -26,14 +26,10 @@ jobs:
       - id: check-new-release
         name: Check for new releases
         run: |
-          echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet || echo -n ${{steps.loki-latest-release.outputs.release}})"
-      - name: Check if we can access output
-        run: |
-          echo "${{ !!steps.check-new-release.outputs.new_release }}"
-          echo "${{ steps.check-new-release.outputs.new_release }}"
-          echo "${{ steps.check-new-release.outputs.new_release != '' }}"
+          git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet
       - name: Trigger release build
-        if: ${{ !!steps.check-new-release.outputs.new_release }}
+        # If we do not have the tag we expect, trigger the new build
+        if: ${{ failure() }}
         uses: ./.github/workflows/build-promtail-static-release.yaml
         with:
           upstream_promtail_release: ${{steps.loki-latest-release.outputs.release}}
