--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -30,6 +30,6 @@ jobs:
       - name: Trigger release build
         # If we do not have the tag we expect, trigger the new build
         if: ${{ failure() }}
-        uses: ./.github/workflows/build-promtail-static-release.yaml
+        uses: ./.github/workflows/build-promtail-static-release.yaml@main
         with:
           upstream_promtail_release: ${{steps.loki-latest-release.outputs.release}}
