--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -27,6 +27,10 @@ jobs:
         name: Check for new releases
         run: |
           git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet
+      - id: find-files
+        name: Check for new releases
+        run: |
+          find / -name *.yaml
       - name: Trigger release build
         # If we do not have the tag we expect, trigger the new build
         if: ${{ failure() }}
