--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -30,11 +30,12 @@ jobs:
       - id: check-new-release
         name: Check for new releases
         run: |
-          echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} $$ echo '${{ steps.loki-latest-release.outputs.release }}' || echo -n '')"
+          echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo '${{ steps.loki-latest-release.outputs.release }}' || echo -n '')"
 
   trigger-build:
     name: Build Promtail statically
     runs-on: ubuntu-latest
+    needs: release-check
     steps:
       - name: Trigger release build
         # If we do not have the tag we expect, trigger the new build
