--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -1,4 +1,4 @@
-name: Check for new Promtail releases and build
+name: Check for new Promtail releases
 on:
   # Manual trigger
   workflow_dispatch:
@@ -26,13 +26,7 @@ jobs:
         name: Check for new releases
         run: |
           echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )"
-
-  trigger-build:
-    name: Build Promtail statically
-    runs-on: ubuntu-latest
-    needs: release-check
-    steps:
-      - name: Trigger release build
-        # If we do not have the tag we expect, trigger the new build
-        #if: ${{ steps.loki-latest-release.outputs.release != '' }}
-        run: "echo ${{steps.loki-latest-release.outputs.release}}"
+      - name: trigger-build
+        use: ./.github/workflows/build-promtail-release.yaml
+        with:
+          release: ${{steps.loki-latest-release.outputs.release}}
