--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -27,6 +27,6 @@ jobs:
         run: |
           echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )"
       - name: trigger-build
-        use: ./.github/workflows/build-promtail-release.yaml
+        uses: ./.github/workflows/build-promtail-release.yaml
         with:
           release: ${{steps.loki-latest-release.outputs.release}}
