--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -1,7 +1,7 @@
 name: Build Promtail releases
 on:
   # Manual trigger
-  workflow_dispatch:
+  workflow_call:
     inputs:
       release:
         required: true
