--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -7,7 +7,7 @@ on:
     - cron:  '0 0,4,8,12,16,20 * * *'
 
 jobs:
-  release-check:
+  check-latest-release:
     name: Detect new releases
     runs-on: ubuntu-latest
     outputs:
@@ -30,8 +30,8 @@ jobs:
           echo "::set-output new_release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )"
 
   create-tag:
-    needs: release-check
-    if: ${{ needs.release-check.outputs.release != '' }}
+    needs: check-latest-release
+    if: needs.check-latest-release.outputs.release != ''
     name: Create shallow tag
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: grafana/loki
-          ref: ${{needs.release-check.outputs.release}}
+          ref: ${{needs.check-latest-release.outputs.release}}
           fetch-depth: 0
 
   # trigger-build:
