--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -7,60 +7,41 @@ on:
     - cron:  '0 0,4,8,12,16,20 * * *'
 
 jobs:
-  job1:
+  check:
+    name: Detect new releases
     runs-on: ubuntu-latest
-    # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      release: ${{steps.check.outputs.release}}
     steps:
-      - id: step1
-        run: echo "::set-output name=test::hello"
-      - id: step2
-        run: echo "::set-output name=test::world"
-  job2:
+      # Find out what is the latest release of grafana/loki
+      - id: loki-latest-release
+        uses: pozetroninc/github-action-get-latest-release@v0.5.0
+        with:
+          repository: grafana/loki
+          excludes: prerelease, draft
+      # Check out the tags of our repo to compare
+      - name: Checkout canonical/loki-k8s-operator
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - id: check
+        name: Check for new releases
+        run: echo "::set-output release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )"
+
+  create-tag:
+    name: Create shallow tag
     runs-on: ubuntu-latest
-    needs: job1
+    needs: check
+    if: needs.check.outputs.release
     steps:
-      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
-
-# jobs:
-#   check-latest-release:
-#     name: Detect new releases
-#     runs-on: ubuntu-latest
-#     outputs:
-#       release: ${{steps.check-new-release.outputs.release}}
-#     steps:
-#       # Find out what is the latest release of grafana/loki
-#       - id: loki-latest-release
-#         uses: pozetroninc/github-action-get-latest-release@v0.5.0
-#         with:
-#           repository: grafana/loki
-#           excludes: prerelease, draft
-#       # Check out the tags of our repo to compare
-#       - name: Checkout canonical/loki-k8s-operator
-#         uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0
-#       - id: check-new-release
-#         name: Check for new releases
-#         run: |
-#           echo "::set-output release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )"
-
-#   create-tag:
-#     needs: check-latest-release
-#     # if: needs.check-latest-release.outputs.release
-#     name: Create shallow tag
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Echo
-#         run: echo ${{needs.check-latest-release.outputs.release}}
-#       - name: Checkout grafana/loki
-#         uses: actions/checkout@v2
-#         with:
-#           repository: grafana/loki
-#           ref: ${{needs.check-latest-release.outputs.release}}
-#           fetch-depth: 0
+      - name: Echo
+        run: echo ${{needs.check.outputs.release}}
+      - name: Checkout grafana/loki
+        uses: actions/checkout@v2
+        with:
+          repository: grafana/loki
+          ref: ${{needs.check.outputs.release}}
+          fetch-depth: 0
 
   # trigger-build:
   #   uses: ./.github/workflows/build-promtail-release.yaml
