--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -28,7 +28,7 @@ jobs:
         name: Check for new releases
         run: |
           release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )
-          echo "::set-output release='${release}'"
+          echo "::set-output release=check::${release}"
 
   create-tag:
     name: Create shallow tag
