--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -36,12 +36,20 @@ jobs:
     needs: check
     if: needs.check.outputs.release
     steps:
+      # Checkout the tag with a shallow clone (no parent commits)
       - name: Checkout grafana/loki
         uses: actions/checkout@v2
         with:
           repository: grafana/loki
           ref: ${{needs.check.outputs.release}}
           fetch-depth: 1
+      # Create a new tag based on the shallow clone, and push it
+      # to canonical/loki-k8s-operator
+      - uses: rickstaa/action-create-tag@v1
+        with:
+          tag: promtail-${{needs.check.outputs.release}}
+          message: "Release ${{needs.check.outputs.release}} of the grafana/loki repository"
+
 
   # trigger-build:
   #   uses: ./.github/workflows/build-promtail-release.yaml
