--- a/.github/workflows/check-promtail-releases.yaml
+++ b/.github/workflows/check-promtail-releases.yaml
@@ -27,7 +27,7 @@ jobs:
       - id: check
         name: Check for new releases
         run: |
-          release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )promtail-v2.4.2
+          release=$(git show-ref --tags promtail-${{steps.loki-latest-release.outputs.release}} --quiet }} && echo -n '' || echo '${{ steps.loki-latest-release.outputs.release }}' )
           if [ -n "${release}" ]; then
             echo "::set-output name=release::${release}"
             echo "New upstream release ${{steps.loki-latest-release.outputs.release}} found"
