--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -7,10 +7,15 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Create shallow tag
     runs-on: ubuntu-latest
+    env:
+      RELEASE: promtail-${{needs.check.outputs.release}}
     steps:
       - name: Checkout grafana/loki, tag ${{needs.check.outputs.release}}
         uses: actions/checkout@v2
@@ -25,17 +30,26 @@ jobs:
           repository: grafana/loki
           fetch-depth: 0
           path: ./loki-k8s-operator
-      - name: Create shallow tag and push it to loki-k8s-operator
+      - name: Create shallow tag
         run: |
           cd ./loki-upstream
-          tag="promtail-${{needs.check.outputs.release}}"
-          git tag ${tag}
+          git tag ${{RELEASE}}
           git remote add charm ../loki-k8s-operator
-          git push charm ${tag}
-      - name: Validate tag
-        run: |
-          cd ./loki-k8s-operator
-          git show promtail-${{needs.check.outputs.release}}
+          git push charm ${{RELEASE}}
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+      - name: Build Promtail
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          distribution: goreleaser
+          version: ${{RELEASE}}
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CGO_ENABLED: 0
+
       # - name: Trigger release build
       #   # If we do not have the tag we expect, trigger the new build
       #   #if: ${{ steps.loki-latest-release.outputs.release != '' }}
