--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -36,6 +36,8 @@ jobs:
           git tag ${RELEASE}
           git remote add charm ../loki-k8s-operator
           git push charm ${RELEASE}
+          cd ../loki-k8s-operator
+          git checkout ${RELEASE}
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
@@ -45,6 +47,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
+          workdir: ./loki-k8s-operator
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
