--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -42,13 +42,18 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.18
+      - name: Check out Goreleaser configurations
+        run: |
+          cd ../loki-k8s-operator
+          git checkout ${{github.ref}} -- promtail-goreleaser.yml
+          cp promtail-goreleaser.yml ../
       - name: Build Promtail
         uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
           version: latest
           workdir: ./loki-k8s-operator
-          args: release --rm-dist
+          args: release --rm-dist --config ../promtail-goreleaser.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CGO_ENABLED: 0
