--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout canonical/loki-k8s-operator
         uses: actions/checkout@v2
         with:
-          repository: grafana/loki
+          repository: canonical/loki-k8s-operator
           fetch-depth: 0
           path: ./loki-k8s-operator
       - name: Prepare Goreleaser configurations
