--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -15,8 +15,6 @@ jobs:
   build:
     name: Create shallow tag
     runs-on: ubuntu-latest
-    env:
-      RELEASE: promtail-${{inputs.release}}
     steps:
       - name: Checkout grafana/loki, tag ${{inputs.release}}
         uses: actions/checkout@v2
@@ -87,11 +85,13 @@ jobs:
     name: Publish promtail resources to CharmHub.io
     runs-on: ubuntu-latest
     needs: test
+    env:
+      RELEASE: promtail-${{inputs.release}}
     steps:
       - name: Checkout grafana/loki, tag ${{inputs.release}}
         uses: actions/checkout@v2
         with:
-          repository: grafana/loki
+          repository: grafana/loki, ${{github.ref}}
           ref: ${{inputs.release}}
           fetch-depth: 1
           path: ./loki-upstream
