--- a/promtail-build/static/test/Dockerfile.alpine
+++ b/promtail-build/static/test/Dockerfile.alpine
@@ -1,5 +1,5 @@
 FROM alpine:latest
 
-ADD ./dist/loki_linux_amd64/promtail /app/promtail
+ADD --chmod=0755 ./dist/loki_linux_amd64/promtail /app/promtail
 
 ENTRYPOINT ["/app/promtail", "--version"]
