--- a/promtail-build/static/test/Dockerfile.rh-ubi8
+++ b/promtail-build/static/test/Dockerfile.rh-ubi8
@@ -1,5 +1,5 @@
 FROM redhat/ubi8
 
-ADD ./dist/loki_linux_amd64/promtail /app/promtail
+ADD --chmod=0755 ./dist/loki_linux_amd64/promtail /app/promtail
 
 ENTRYPOINT ["/app/promtail", "--version"]
