--- a/.github/workflows/build-promtail-release.yaml
+++ b/.github/workflows/build-promtail-release.yaml
@@ -62,24 +62,28 @@ jobs:
     # TODO: Also run tests on arm64
     strategy:
       matrix:
+        arch: [amd64]
         base: [alpine, debian, rb-ubi8, scratch, ubuntu]
     steps:
       - name: Checkout canonical/loki-k8s-operator
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Download promtail-amd64
+      - name: Download the promtail-${{matrix.arch}} artefact
         uses: actions/download-artifact@v3
         with:
-          name: promtail-amd64
-          path: ./dist/loki_linux_amd64/promtail
+          name: promtail-${{matrix.arch}}
+          path: ./dist/loki_linux_${{matrix.arch}}/
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: ./dist/loki_linux_${{matrix.arch}}/
       - name: Check the linkage of the Promtail binary
         run: |
-          file ./dist/loki_linux_amd64/promtail
+          file ./dist/loki_linux_${{matrix.arch}}/promtail
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build and test ${{matrix.base}} image
-        # If promtail is borked on this base, the next command will fail
+        # If promtail is borked on this base, the `docker run` invocation will fail
         run: |
           DOCKER_BUILDKIT=1 docker build . -f promtail-build/static/test/Dockerfile.${{matrix.base}} -t promtail-${{matrix.base}}
           docker run promtail-${{matrix.base}}
